--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,6 +1,12 @@
 <div id='container'>
 <!-- Your code here -->
-
+  <form ng-submit='addLink()'>
+    <input type="url" ng-model='link.url'>
+  </form>
+  <hr>
+  <pre>
+    {{link}}
+  </pre>
 </div>
 
 
